# xstack

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
crates/autonat/: Cargo.toml  build.rs~
crates/autonat/proto/: autonat.proto
crates/autonat/src/: client.rs  lib.rs
crates/autonat/src/proto/: autonat.rs  mod.rs
crates/circuit/: Cargo.toml  build.rs~
crates/circuit/proto/: DCUtR.proto  circuit.proto
crates/circuit/src/: errors.rs  hop.rs  lib.rs  rpc.rs  stop.rs  transport.rs
crates/circuit/src/proto/: DCUtR.rs  circuit.rs  mod.rs
crates/circuit/src/protocols/: dcutr.rs  mod.rs  stop.rs
crates/circuit/tests/: client.rs
crates/dnsaddr/: Cargo.toml
crates/dnsaddr/src/: lib.rs
crates/kad/: Cargo.toml  build.rs
crates/kad/proto/: rpc.proto
crates/kad/src/: errors.rs  kbucket.rs  key.rs  lib.rs  router.rs  rpc.rs  store.rs
crates/kad/src/proto/: rpc.rs
crates/kad/tests/: kad.rs
crates/mdns/: Cargo.toml
crates/mdns/src/: lib.rs
crates/quic/: Cargo.toml
crates/quic/examples/: p2p_quic_ping.rs
crates/quic/src/: lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs  transport.rs
crates/tcp/: Cargo.toml
crates/tcp/examples/: p2p_tcp_ping.rs
crates/tcp/src/: lib.rs
crates/tls/: Cargo.toml
crates/tls/src/: lib.rs
crates/x509/: Cargo.toml
crates/x509/src/: lib.rs
crates/x509/src/x509_testdata/: ed25519.der  ed448.der  gen.sh  nistp256_sha256.der  nistp384_sha256.der  nistp384_sha384.der  nistp521_sha512.der  openssl.cfg  rsa_pkcs1_sha256.der  rsa_pkcs1_sha384.der  rsa_pkcs1_sha512.der  rsa_pss_sha256.der
crates/xstack/: Cargo.toml  build.rs  build.rs~  ~build.rs
crates/xstack/proto/: identity.proto
crates/xstack/src/: book.rs  connector.rs  errors.rs  event.rs  global.rs  keystore.rs  lib.rs  macros.rs  multiaddr.rs  rpc.rs  serve.rs  stream.rs  transport.rs
crates/xstack/src/proto/: identify.rs  identity.rs  mod.rs
crates/xstack/src/switch/: autonat.rs  builder.rs  immutable.rs  listener.rs  mod.rs  mutable.rs  pool.rs  protocols.rs  switch.rs  types.rs
