[package]
description = "The autonat protocol implementation for xstack."
documentation = "https://docs.rs/xstack-autonat"
edition.workspace = true
license = "MIT"
name = "xstack-autonat"
repository = "https://github.com/HalaOS/xstack.git"
version.workspace = true

[dependencies]
xstack = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
xstack-tcp = { workspace = true }
xstack-quic = { workspace = true }
async-trait = { workspace = true }
rasi = { workspace = true }
protobuf = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi-mio = { workspace = true }
pretty_env_logger = { workspace = true }

[features]
default = ["global_register"]
global_register = ["xstack/global_register"]
