[package]
description = "The Circuit Relay v2 implementation for xstack."
documentation = "https://docs.rs/xstack-circuit"
edition.workspace = true
license = "MIT"
name = "xstack-circuit"
repository = "https://github.com/HalaOS/xstack.git"
version.workspace = true

[dependencies]
xstack = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
rasi = { workspace = true }
protobuf = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }
