[package]
description = "The Circuit Relay v2 implementation for xstack."
documentation = "https://docs.rs/xstack-circuit"
edition.workspace = true
license = "MIT"
name = "xstack-circuit"
repository = "https://github.com/HalaOS/xstack.git"
version.workspace = true

[dependencies]
xstack = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rasi = { workspace = true }
protobuf = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }
async-trait = { workspace = true }
futures-yamux = { workspace = true }
xstack-x509 = { workspace = true }
multistream-select = { workspace = true }
futures-boring = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
default = ["global_register"]
global_register = []
