[package]
description = "The Circuit Relay v2 implementation for xstack."
documentation = "https://docs.rs/xstack-circuit"
edition.workspace = true
license = "MIT"
name = "xstack-circuit"
repository = "https://github.com/HalaOS/xstack.git"
version.workspace = true

[dependencies]
xstack = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rasi = { workspace = true }
protobuf = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }
async-trait = { workspace = true }
futures-map = { workspace = true }
xstack-tls = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
xstack-kad = { workspace = true }
futures-test = { workspace = true }
rasi-mio = { workspace = true }
pretty_env_logger = { workspace = true }
xstack-tcp = { workspace = true }
xstack-quic = { workspace = true }
xstack-dnsaddr = { workspace = true }
xstack-autonat = { workspace = true }
xstack = { workspace = true, features = ["global_register"] }
rand = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
default = ["global_register"]
global_register = []
