[package]
description = "The tcp transport implementation for xstack"
documentation = "https://docs.rs/xstack-tcp"
edition.workspace = true
license = "MIT"
name = "xstack-tcp"
repository = "https://github.com/HalaOS/xstack.git"
version.workspace = true

[dependencies]
xstack-tls = { workspace = true }
xstack = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
rasi = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
rasi = { workspace = true, features = ["task-futures"] }
rasi-mio = { workspace = true }
futures-test = { workspace = true }
pretty_env_logger = { workspace = true }
xstack-spec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rand = { workspace = true }
